--- a/yaf-inmobiliaria-angular/src/app/footer/footer.component.html
+++ b/yaf-inmobiliaria-angular/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
       <p>Desarrollado por yaf 2019</p>
       <ul class="redes">
-          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="https://www.facebook.com/YAF-257217418259266/?modal=admin_todo_tour"><i class="fab fa-facebook"></i></a></li>
           <li><a href="#"><i class="fab fa-youtube"></i></a></li>
           <li><a href="#"><i class="fab fa-html5"></i></a></li>
       </ul>
