--- a/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
@@ -3,7 +3,6 @@
       <div class="container">
           <h1 class="display-3">Encuentra la mejor Vivienda para ti! </h1>
           <p>La comodidad es algo que no te puedes dar el lujo de negar</p>
-          <a href="login.html " class="btn-primary btn-lg">Registrate</a>
       </div>
   </div>
   <!-- <div class="div-flecha_bajar" >
@@ -14,7 +13,7 @@
 </section>
 <section class="presentacion " id="presentacion">
   <div class="container">
-     <a ><h2 class="display-3 text-md-left">¿Quienes somos? </h2></a> 
+     <a ><h2 class="display-3 text-md-left wow slideInLeft">¿Quienes somos? </h2></a> 
        <div class="row">
            <div class="col-xs-12 col-md-8">
               <p>
