Solucion problema inmuebles

--- a/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
@@ -48,7 +48,7 @@
             </div>
             <select class="custom-select" (change)="selectTipInm($event)" id="tipInmueble">
               <option *ngFor="let TipInmueble of TipoInmuebles  " value="{{TipInmueble.IdTipoInmueble_TipoInmuebles }}">
-                {{TipInmueble.NombreTipoInmueble}}</option>
+                {{TipInmueble.NombreTipoInmueble_TipoInmuebles}}</option>
             </select>
           </div>
         </div>
